--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -14,6 +14,8 @@ Metrics/PerceivedComplexity:
   Max: 100
 Metrics/CyclomaticComplexity:
   Max: 100
+Metrics/ModuleLength:
+  Max: 120
 Metrics/MethodLength:
   Max: 20
 Metrics/AbcSize:
